internal/ade/parser/ade_parser.go
// Code generated from ADE.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // ADE

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type ADEParser struct {
	*antlr.BaseParser
}

var ADEParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func adeParserInit() {
	staticData := &ADEParserStaticData
	staticData.LiteralNames = []string{
		"", "'adr'", "'file'", "'code'", "'component'", "'class'", "'interface'",
		"'path'", "'must'", "'not'", "'only'", "'depend'", "'exist'", "'contain'",
		"'implement'", "'extend'", "'annotated'", "'accessed'", "'acyclic'",
		"'on'", "'be'", "'by'", "'with'", "'match'", "'exclude'", "'implementing'",
		"'in'", "'public'", "'internal'", "'private'", "'abstract'", "'sealed'",
		"'static'", "'severity'", "'error'", "'warning'", "'='", "','", "'{'",
		"'}'",
	}
	staticData.SymbolicNames = []string{
		"", "ADR", "FILE", "CODE", "COMPONENT", "CLASS", "INTERFACE", "PATH",
		"MUST", "NOT", "ONLY", "DEPEND", "EXIST", "CONTAIN", "IMPLEMENT", "EXTEND",
		"ANNOTATED", "ACCESSED", "ACYCLIC", "ON", "BE", "BY", "WITH", "MATCH",
		"EXCLUDE", "IMPLEMENTING", "IN", "PUBLIC", "INTERNAL", "PRIVATE", "ABSTRACT",
		"SEALED", "STATIC", "SEVERITY", "ERROR", "WARNING", "EQ", "COMMA", "LBRACE",
		"RBRACE", "IDENTIFIER", "STRING", "COMMENT", "WS",
	}
	staticData.RuleNames = []string{
		"file", "adrDecl", "selectorDecl", "ruleDecl", "ruleType", "ruleStmt",
		"assertionStmt", "subjectExpr", "targetExpr", "selectorType", "mustExpr",
		"verbPhrase", "visibility", "typeConstraint", "excludeStmt", "severityStmt",
		"severityValue",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// ADEParserInit initializes any static state used to implement ADEParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewADEParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func ADEParserInit() {
	staticData := &ADEParserStaticData
	staticData.once.Do(adeParserInit)
}

// NewADEParser produces a new parser instance for the optional input antlr.TokenStream.
func NewADEParser(input antlr.TokenStream) *ADEParser {
	ADEParserInit()
	this := new(ADEParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &ADEParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "ADE.g4"

	return this
}

// ADEParser tokens.
const (
	ADEParserEOF          = antlr.TokenEOF
	ADEParserADR          = 1
	ADEParserFILE         = 2
	ADEParserCODE         = 3
	ADEParserCOMPONENT    = 4
	ADEParserCLASS        = 5
	ADEParserINTERFACE    = 6
	ADEParserPATH         = 7
	ADEParserMUST         = 8
	ADEParserNOT          = 9
	ADEParserONLY         = 10
	ADEParserDEPEND       = 11
	ADEParserEXIST        = 12
	ADEParserCONTAIN      = 13
	ADEParserIMPLEMENT    = 14
	ADEParserEXTEND       = 15
	ADEParserANNOTATED    = 16
	ADEParserACCESSED     = 17
	ADEParserACYCLIC      = 18
	ADEParserON           = 19
	ADEParserBE           = 20
	ADEParserBY           = 21
	ADEParserWITH         = 22
	ADEParserMATCH        = 23
	ADEParserEXCLUDE      = 24
	ADEParserIMPLEMENTING = 25
	ADEParserIN           = 26
	ADEParserPUBLIC       = 27
	ADEParserINTERNAL     = 28
	ADEParserPRIVATE      = 29
	ADEParserABSTRACT     = 30
	ADEParserSEALED       = 31
	ADEParserSTATIC       = 32
	ADEParserSEVERITY     = 33
	ADEParserERROR        = 34
	ADEParserWARNING      = 35
	ADEParserEQ           = 36
	ADEParserCOMMA        = 37
	ADEParserLBRACE       = 38
	ADEParserRBRACE       = 39
	ADEParserIDENTIFIER   = 40
	ADEParserSTRING       = 41
	ADEParserCOMMENT      = 42
	ADEParserWS           = 43
)

// ADEParser rules.
const (
	ADEParserRULE_file           = 0
	ADEParserRULE_adrDecl        = 1
	ADEParserRULE_selectorDecl   = 2
	ADEParserRULE_ruleDecl       = 3
	ADEParserRULE_ruleType       = 4
	ADEParserRULE_ruleStmt       = 5
	ADEParserRULE_assertionStmt  = 6
	ADEParserRULE_subjectExpr    = 7
	ADEParserRULE_targetExpr     = 8
	ADEParserRULE_selectorType   = 9
	ADEParserRULE_mustExpr       = 10
	ADEParserRULE_verbPhrase     = 11
	ADEParserRULE_visibility     = 12
	ADEParserRULE_typeConstraint = 13
	ADEParserRULE_excludeStmt    = 14
	ADEParserRULE_severityStmt   = 15
	ADEParserRULE_severityValue  = 16
)

// IFileContext is an interface to support dynamic dispatch.
type IFileContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AdrDecl() IAdrDeclContext
	EOF() antlr.TerminalNode
	AllSelectorDecl() []ISelectorDeclContext
	SelectorDecl(i int) ISelectorDeclContext
	AllRuleDecl() []IRuleDeclContext
	RuleDecl(i int) IRuleDeclContext

	// IsFileContext differentiates from other interfaces.
	IsFileContext()
}

type FileContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFileContext() *FileContext {
	var p = new(FileContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ADEParserRULE_file
	return p
}

func InitEmptyFileContext(p *FileContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ADEParserRULE_file
}

func (*FileContext) IsFileContext() {}

func NewFileContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FileContext {
	var p = new(FileContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ADEParserRULE_file

	return p
}

func (s *FileContext) GetParser() antlr.Parser { return s.parser }

func (s *FileContext) AdrDecl() IAdrDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAdrDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAdrDeclContext)
}

func (s *FileContext) EOF() antlr.TerminalNode {
	return s.GetToken(ADEParserEOF, 0)
}

func (s *FileContext) AllSelectorDecl() []ISelectorDeclContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ISelectorDeclContext); ok {
			len++
		}
	}

	tst := make([]ISelectorDeclContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ISelectorDeclContext); ok {
			tst[i] = t.(ISelectorDeclContext)
			i++
		}
	}

	return tst
}

func (s *FileContext) SelectorDecl(i int) ISelectorDeclContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISelectorDeclContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISelectorDeclContext)
}

func (s *FileContext) AllRuleDecl() []IRuleDeclContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IRuleDeclContext); ok {
			len++
		}
	}

	tst := make([]IRuleDeclContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IRuleDeclContext); ok {
			tst[i] = t.(IRuleDeclContext)
			i++
		}
	}

	return tst
}

func (s *FileContext) RuleDecl(i int) IRuleDeclContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRuleDeclContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRuleDeclContext)
}

func (s *FileContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FileContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FileContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ADEVisitor:
		return t.VisitFile(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *ADEParser) File() (localctx IFileContext) {
	localctx = NewFileContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, ADEParserRULE_file)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(34)
		p.AdrDecl()
	}
	p.SetState(39)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&252) != 0 {
		p.SetState(37)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}

		switch p.GetTokenStream().LA(1) {
		case ADEParserCOMPONENT, ADEParserCLASS, ADEParserINTERFACE, ADEParserPATH:
			{
				p.SetState(35)
				p.SelectorDecl()
			}

		case ADEParserFILE, ADEParserCODE:
			{
				p.SetState(36)
				p.RuleDecl()
			}

		default:
			p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
			goto errorExit
		}

		p.SetState(41)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(42)
		p.Match(ADEParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IAdrDeclContext is an interface to support dynamic dispatch.
type IAdrDeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	ADR() antlr.TerminalNode
	AllSTRING() []antlr.TerminalNode
	STRING(i int) antlr.TerminalNode

	// IsAdrDeclContext differentiates from other interfaces.
	IsAdrDeclContext()
}

type AdrDeclContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAdrDeclContext() *AdrDeclContext {
	var p = new(AdrDeclContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ADEParserRULE_adrDecl
	return p
}

func InitEmptyAdrDeclContext(p *AdrDeclContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ADEParserRULE_adrDecl
}

func (*AdrDeclContext) IsAdrDeclContext() {}

func NewAdrDeclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AdrDeclContext {
	var p = new(AdrDeclContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ADEParserRULE_adrDecl

	return p
}

func (s *AdrDeclContext) GetParser() antlr.Parser { return s.parser }

func (s *AdrDeclContext) ADR() antlr.TerminalNode {
	return s.GetToken(ADEParserADR, 0)
}

func (s *AdrDeclContext) AllSTRING() []antlr.TerminalNode {
	return s.GetTokens(ADEParserSTRING)
}

func (s *AdrDeclContext) STRING(i int) antlr.TerminalNode {
	return s.GetToken(ADEParserSTRING, i)
}

func (s *AdrDeclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *AdrDeclContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *AdrDeclContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ADEVisitor:
		return t.VisitAdrDecl(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *ADEParser) AdrDecl() (localctx IAdrDeclContext) {
	localctx = NewAdrDeclContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, ADEParserRULE_adrDecl)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(44)
		p.Match(ADEParserADR)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(45)
		p.Match(ADEParserSTRING)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(46)
		p.Match(ADEParserSTRING)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ISelectorDeclContext is an interface to support dynamic dispatch.
type ISelectorDeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllSTRING() []antlr.TerminalNode
	STRING(i int) antlr.TerminalNode
	EQ() antlr.TerminalNode
	COMPONENT() antlr.TerminalNode
	CLASS() antlr.TerminalNode
	INTERFACE() antlr.TerminalNode
	PATH() antlr.TerminalNode

	// IsSelectorDeclContext differentiates from other interfaces.
	IsSelectorDeclContext()
}

type SelectorDeclContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySelectorDeclContext() *SelectorDeclContext {
	var p = new(SelectorDeclContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ADEParserRULE_selectorDecl
	return p
}

func InitEmptySelectorDeclContext(p *SelectorDeclContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ADEParserRULE_selectorDecl
}

func (*SelectorDeclContext) IsSelectorDeclContext() {}

func NewSelectorDeclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SelectorDeclContext {
	var p = new(SelectorDeclContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ADEParserRULE_selectorDecl

	return p
}

func (s *SelectorDeclContext) GetParser() antlr.Parser { return s.parser }

func (s *SelectorDeclContext) AllSTRING() []antlr.TerminalNode {
	return s.GetTokens(ADEParserSTRING)
}

func (s *SelectorDeclContext) STRING(i int) antlr.TerminalNode {
	return s.GetToken(ADEParserSTRING, i)
}

func (s *SelectorDeclContext) EQ() antlr.TerminalNode {
	return s.GetToken(ADEParserEQ, 0)
}

func (s *SelectorDeclContext) COMPONENT() antlr.TerminalNode {
	return s.GetToken(ADEParserCOMPONENT, 0)
}

func (s *SelectorDeclContext) CLASS() antlr.TerminalNode {
	return s.GetToken(ADEParserCLASS, 0)
}

func (s *SelectorDeclContext) INTERFACE() antlr.TerminalNode {
	return s.GetToken(ADEParserINTERFACE, 0)
}

func (s *SelectorDeclContext) PATH() antlr.TerminalNode {
	return s.GetToken(ADEParserPATH, 0)
}

func (s *SelectorDeclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SelectorDeclContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SelectorDeclContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ADEVisitor:
		return t.VisitSelectorDecl(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *ADEParser) SelectorDecl() (localctx ISelectorDeclContext) {
	localctx = NewSelectorDeclContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, ADEParserRULE_selectorDecl)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(48)
		_la = p.GetTokenStream().LA(1)

		if !((int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&240) != 0) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}
	{
		p.SetState(49)
		p.Match(ADEParserSTRING)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(50)
		p.Match(ADEParserEQ)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(51)
		p.Match(ADEParserSTRING)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IRuleDeclContext is an interface to support dynamic dispatch.
type IRuleDeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	RuleType() IRuleTypeContext
	STRING() antlr.TerminalNode
	LBRACE() antlr.TerminalNode
	RBRACE() antlr.TerminalNode
	AllRuleStmt() []IRuleStmtContext
	RuleStmt(i int) IRuleStmtContext

	// IsRuleDeclContext differentiates from other interfaces.
	IsRuleDeclContext()
}

type RuleDeclContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRuleDeclContext() *RuleDeclContext {
	var p = new(RuleDeclContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ADEParserRULE_ruleDecl
	return p
}

func InitEmptyRuleDeclContext(p *RuleDeclContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ADEParserRULE_ruleDecl
}

func (*RuleDeclContext) IsRuleDeclContext() {}

func NewRuleDeclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *RuleDeclContext {
	var p = new(RuleDeclContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ADEParserRULE_ruleDecl

	return p
}

func (s *RuleDeclContext) GetParser() antlr.Parser { return s.parser }

func (s *RuleDeclContext) RuleType() IRuleTypeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRuleTypeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRuleTypeContext)
}

func (s *RuleDeclContext) STRING() antlr.TerminalNode {
	return s.GetToken(ADEParserSTRING, 0)
}

func (s *RuleDeclContext) LBRACE() antlr.TerminalNode {
	return s.GetToken(ADEParserLBRACE, 0)
}

func (s *RuleDeclContext) RBRACE() antlr.TerminalNode {
	return s.GetToken(ADEParserRBRACE, 0)
}

func (s *RuleDeclContext) AllRuleStmt() []IRuleStmtContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IRuleStmtContext); ok {
			len++
		}
	}

	tst := make([]IRuleStmtContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IRuleStmtContext); ok {
			tst[i] = t.(IRuleStmtContext)
			i++
		}
	}

	return tst
}

func (s *RuleDeclContext) RuleStmt(i int) IRuleStmtContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRuleStmtContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRuleStmtContext)
}

func (s *RuleDeclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RuleDeclContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *RuleDeclContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ADEVisitor:
		return t.VisitRuleDecl(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *ADEParser) RuleDecl() (localctx IRuleDeclContext) {
	localctx = NewRuleDeclContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, ADEParserRULE_ruleDecl)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(53)
		p.RuleType()
	}
	{
		p.SetState(54)
		p.Match(ADEParserSTRING)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(55)
		p.Match(ADEParserLBRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(59)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&1108118339824) != 0 {
		{
			p.SetState(56)
			p.RuleStmt()
		}

		p.SetState(61)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(62)
		p.Match(ADEParserRBRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IRuleTypeContext is an interface to support dynamic dispatch.
type IRuleTypeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	FILE() antlr.TerminalNode
	CODE() antlr.TerminalNode

	// IsRuleTypeContext differentiates from other interfaces.
	IsRuleTypeContext()
}

type RuleTypeContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRuleTypeContext() *RuleTypeContext {
	var p = new(RuleTypeContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ADEParserRULE_ruleType
	return p
}

func InitEmptyRuleTypeContext(p *RuleTypeContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ADEParserRULE_ruleType
}

func (*RuleTypeContext) IsRuleTypeContext() {}

func NewRuleTypeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *RuleTypeContext {
	var p = new(RuleTypeContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ADEParserRULE_ruleType

	return p
}

func (s *RuleTypeContext) GetParser() antlr.Parser { return s.parser }

func (s *RuleTypeContext) FILE() antlr.TerminalNode {
	return s.GetToken(ADEParserFILE, 0)
}

func (s *RuleTypeContext) CODE() antlr.TerminalNode {
	return s.GetToken(ADEParserCODE, 0)
}

func (s *RuleTypeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RuleTypeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *RuleTypeContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ADEVisitor:
		return t.VisitRuleType(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *ADEParser) RuleType() (localctx IRuleTypeContext) {
	localctx = NewRuleTypeContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, ADEParserRULE_ruleType)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(64)
		_la = p.GetTokenStream().LA(1)

		if !(_la == ADEParserFILE || _la == ADEParserCODE) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IRuleStmtContext is an interface to support dynamic dispatch.
type IRuleStmtContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AssertionStmt() IAssertionStmtContext
	ExcludeStmt() IExcludeStmtContext
	SeverityStmt() ISeverityStmtContext

	// IsRuleStmtContext differentiates from other interfaces.
	IsRuleStmtContext()
}

type RuleStmtContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}
